@@ -202,6 +202,7 @@
     <string name="use_magnetdl">Use MagnetDL</string>
     <string name="use_nyaa">Use Nyaa</string>
     <string name="use_eztv">Use Eztv</string>
+    <string name="use_torrent_paradise">Use TorrentParadise</string>
     <string name="transfer_status_demuxing">Demuxing</string>
     <string name="you_need_a_bitcoin_wallet_app">You need a Bitcoin wallet installed on your device to submit a BTC donation.</string>
     <string name="transfers_select_all">all</string>
