@@ -34,6 +34,7 @@ import com.frostwire.search.one337x.One337xSearchPerformer;
 import com.frostwire.search.soundcloud.SoundcloudSearchPerformer;
 import com.frostwire.search.torlock.TorLockSearchPerformer;
 import com.frostwire.search.torrentdownloads.TorrentDownloadsSearchPerformer;
+import com.frostwire.search.torrentparadise.TorrentParadiseSearchPerformer;
 import com.frostwire.search.torrentz2.Torrentz2SearchPerformer;
 import com.frostwire.search.tpb.TPBSearchPerformer;
 import com.frostwire.search.yify.YifySearchPerformer;
@@ -301,7 +302,16 @@ public abstract class SearchEngine {
         }
     };
 
+
+    public static final SearchEngine TORRENT_PARADISE = new SearchEngine("TorrentParadise", Constants.PREF_KEY_SEARCH_USE_TORRENT_PARADISE) {
+        @Override
+        public SearchPerformer getPerformer(long token, String keywords) {
+            return new TorrentParadiseSearchPerformer(token, keywords, DEFAULT_TIMEOUT);
+        }
+    };
+
     private static final List<SearchEngine> ALL_ENGINES = Arrays.asList(
+            TORRENT_PARADISE,
             MAGNETDL,
             TORRENTZ2,
             YIFY,
